--- a/crates/tauri-schema-worker/package.json
+++ b/crates/tauri-schema-worker/package.json
@@ -9,7 +9,7 @@
 	},
 	"devDependencies": {
 		"@playform/build": "",
-		"wrangler": "^3.75"
+		"wrangler": "3.78"
 	},
 	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
 	"keywords": [
