--- a/crates/tauri-cli/templates/plugin/package.json
+++ b/crates/tauri-cli/templates/plugin/package.json
@@ -8,7 +8,7 @@
 		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
 	},
 	"dependencies": {
-		"@tauri-apps/api": ">=2.0.0-rc.6"
+		"@tauri-apps/api": ">=2.0.1"
 	},
 	"description": "",
 	"devDependencies": {
