--- a/crates/tauri-cli/templates/plugin/__example-api/tauri-app/package.json
+++ b/crates/tauri-cli/templates/plugin/__example-api/tauri-app/package.json
@@ -1,11 +1,11 @@
 {
 	"dependencies": {
-		"@tauri-apps/api": "2.0.0-rc.6",
+		"@tauri-apps/api": "2.0.1",
 		"tauri-plugin-{{ plugin_name }}-api": "file:../../"
 	},
 	"devDependencies": {
 		"@playform/build": "",
-		"@tauri-apps/cli": "2.0.0-rc.17"
+		"@tauri-apps/cli": "2.0.0"
 	},
 	"name": "tauri-app",
 	"scripts": {
