--- a/crates/tauri-cli/templates/plugin/package.json
+++ b/crates/tauri-cli/templates/plugin/package.json
@@ -1,6 +1,6 @@
 {
 	"dependencies": {
-		"@tauri-apps/api": ">=2.0.0-rc.6"
+		"@tauri-apps/api": ">=2.0.1"
 	},
 	"description": "",
 	"devDependencies": {
