--- a/crates/tauri-schema-worker/package.json
+++ b/crates/tauri-schema-worker/package.json
@@ -15,7 +15,7 @@
 	},
 	"devDependencies": {
 		"@playform/build": "",
-		"wrangler": "^3.75"
+		"wrangler": "3.75"
 	},
 	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
 	"keywords": [
