--- a/examples/api/package.json
+++ b/examples/api/package.json
@@ -23,11 +23,11 @@
 	},
 	"name": "api",
 =======
-		"@iconify-json/codicon": "^1.1.49",
-		"@iconify-json/ph": "^1.1.13",
+		"@iconify-json/codicon": "1.1.49",
+		"@iconify-json/ph": "1.1.13",
 		"@playform/build": "",
-		"@unocss/extractor-svelte": "^0.61.0",
-		"unocss": "^0.61.0"
+		"@unocss/extractor-svelte": "0.61.0",
+		"unocss": "0.61.0"
 	},
 	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
 	"keywords": [
