--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -15,8 +15,8 @@
 		"@playform/build": "",
 		"@types/node": "22.7.4",
 		"fast-glob": "3.3.2",
-		"globals": "^15.10.0",
-		"tslib": "^2.7.0"
+		"globals": "15.10.0",
+		"tslib": "2.7.0"
 	},
 	"exports": {
 		".": {
