--- a/crates/tauri-cli/Cargo.toml
+++ b/crates/tauri-cli/Cargo.toml
@@ -73,7 +73,7 @@ toml = "0.8"
 jsonschema = "0.18"
 handlebars = "6.0"
 include_dir = "0.7"
-minisign = "=0.7.3"
+minisign = "0.7.3"
 base64 = "0.22.0"
 ureq = { version = "2.9.6", default-features = false, features = ["gzip"] }
 os_info = "3"
