--- a/crates/tauri-cli/templates/plugin/__example-basic/vanilla/package.json
+++ b/crates/tauri-cli/templates/plugin/__example-basic/vanilla/package.json
@@ -8,7 +8,7 @@
 		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
 	},
 	"dependencies": {
-		"@tauri-apps/cli": "2.0.0-alpha.17"
+		"@tauri-apps/cli": "2.0.2"
 	},
 	"description": "",
 	"devDependencies": {
