--- a/crates/tauri/Cargo.toml
+++ b/crates/tauri/Cargo.toml
@@ -78,14 +78,14 @@ glob = "0.3"
 urlpattern = "0.3"
 mime = "0.3"
 data-url = { version = "0.3", optional = true }
-serialize-to-javascript = "=0.1.1"
+serialize-to-javascript = "0.1.1"
 image = { version = "0.25", default-features = false, optional = true }
 http-range = { version = "0.1.5", optional = true }
 tracing = { version = "0.1", optional = true }
 heck = "0.5"
 log = "0.4"
 dunce = "1"
-specta = { version = "^2.0.0-rc.16", optional = true, default-features = false, features = [
+specta = { version = "2.0.0-rc.16", optional = true, default-features = false, features = [
   "function",
   "derive",
 ] }
@@ -98,7 +98,7 @@ tray-icon = { version = "0.19", default-features = false, features = [
 
 [target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
 gtk = { version = "0.18", features = ["v3_24"] }
-webkit2gtk = { version = "=2.0.1", features = ["v2_40"] }
+webkit2gtk = { version = "2.0.1", features = ["v2_40"] }
 
 # macOS
 [target.'cfg(target_os = "macos")'.dependencies]
