--- a/examples/file-associations/package.json
+++ b/examples/file-associations/package.json
@@ -1,40 +1,40 @@
 {
-	"name": "file-associations",
-	"version": "0.0.1",
-	"private": false,
+	"author": {
+		"email": "Source/Open@Editor.Land",
+		"name": "🖋️ Source — 👐🏻 Open —",
+		"url": "HTTPS://Editor.Land"
+	},
+	"bugs": {
+		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
+	},
+	"devDependencies": {
+		"@playform/build": "0.1.7"
+	},
+	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
 	"keywords": [
 		"codeeditorland",
 		"land",
 		"playform"
 	],
-	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
-	"bugs": {
-		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
+	"license": "SEE LICENSE IN LICENSE",
+	"name": "file-associations",
+	"pkg": {
+		"assets": [
+			"src/**/*"
+		]
+	},
+	"private": false,
+	"publishConfig": {
+		"access": "public"
 	},
 	"repository": {
 		"type": "git",
 		"url": "git+HTTPS://github.com/CodeEditorLand/Tauri.git"
 	},
-	"license": "SEE LICENSE IN LICENSE",
-	"author": {
-		"name": "🖋️ Source — 👐🏻 Open —",
-		"email": "Source/Open@Editor.Land",
-		"url": "HTTPS://Editor.Land"
-	},
-	"type": "module",
 	"scripts": {
 		"prepublishOnly": "Build 'Source/**/*.ts'",
 		"tauri": "node ../../packages/cli/node/tauri.js"
 	},
-	"devDependencies": {
-		"@playform/build": "0.1.7"
-	},
-	"publishConfig": {
-		"access": "public"
-	},
-	"pkg": {
-		"assets": [
-			"src/**/*"
-		]
-	}
+	"type": "module",
+	"version": "0.0.1"
 }
