--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -15,8 +15,8 @@
 		"@playform/build": "0.1.8",
 		"@types/node": "22.7.9",
 		"fast-glob": "3.3.2",
-		"globals": "^15.11.0",
-		"tslib": "^2.8.0"
+		"globals": "15.11.0",
+		"tslib": "2.8.0"
 	},
 	"exports": {
 		".": {
