--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -59,8 +59,8 @@
 		"@playform/build": "0.1.9",
 		"@types/node": "22.9.1",
 		"fast-glob": "3.3.2",
-		"globals": "^15.12.0",
-		"tslib": "^2.8.1"
+		"globals": "15.12.0",
+		"tslib": "2.8.1"
 	},
 	"publishConfig": {
 		"access": "public"
