--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -18,7 +18,7 @@
 	},
 	"funding": {
 		"type": "opencollective",
-		"url": "https://opencollective.com/tauri"
+		"url": "HTTPS://opencollective.com/tauri"
 	},
 	"license": "SEE LICENSE IN LICENSE",
 	"author": {
